# temple

./: .gitignore  CHANGELOG.md  Cargo.toml  GUIDE.md  Makefile  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
ci/: build-deb  cargo-out-dir  sha256-releases
examples/polarbears/: README.md  generate.sh  polarbears.html
examples/polarbears/templates/: base.html  main.html  row.html
pkg/brew/: temple-bin.rb  temple.rb
scripts/: filters.lua  init.lua
src/: cli.yml  main.rs  temple.lua
templates/: base.html  home.html
tests/: tests.bats
tests/contexts/: auto_escape.json  invalid_malformed.json  invalid_malformed.yaml  simple_kv.txt
tests/lua/: init.lua
tests/templates/: auto_escape.html  custom_filters.txt  extends.txt  extends_base.txt  include.txt
