[package]
name = "temple"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minijinja = { version = "0.5.0", features = ["source"] }
clap = {version = "2.33.0", features = ["yaml", "wrap_help"]}
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
anyhow = "1.0"
exitcode = "1.1.2"
