[package]
name = "temple"
version = "0.4.1"
authors = ["Ben Wilber <benwilber@pm.me>"]
description = """
A commandline program that renders template files with structured context inputs.  It is most often used to transform JSON data from a web API to a presentation format such as HTML.
"""
documentation = "https://github.com/benwilber/temple"
homepage = "https://github.com/benwilber/temple"
repository = "https://github.com/benwilber/temple"
readme = "README.md"
keywords = ["templates", "jinja"]
categories = ["command-line-utilities", "text-processing", "template-engine"]
license-file = "LICENSE"
exclude = ["HomebrewFormula"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minijinja = { version = "0.6.0", features = ["source"] }
clap = {version = "2.33.0", features = ["yaml", "wrap_help"]}
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
anyhow = "1.0"
exitcode = "1.1.2"

[dev-dependencies]
pretty_assertions = "0.6.1"
subprocess = "0.2.6"
shlex = "1.1.0"
